# back-internship

./: .dockerignore  .env.docker  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.test.ini  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  exception.py  keygen.py  security.py
app/core/certs/: jwt-private.pem  jwt-public.pem
app/crud/: company_crud.py  user_crud.py
app/db/: config.py  models.py  postgres_init.py  redis_init.py
app/routers/: check_routers.py  company_routers.py  crud_routers.py  db_routers.py  user_routers.py
app/schemas/: company_schemas.py  schemas.py  user_schemas.py
app/utils/: auth0.py  jwt_utils.py
certs/: jwt-private.pem  jwt-public.pem
migrations/: env.py
migrations/versions/: 05954723c2fd_add_column_username_to_user.py  0ef51e3044be_first_migration.py  4876c86fce38.py  5ceb1b2a63bf_add_new_setings_to_fields.py  5ceb1b2a63bfbe_first_migration.py  85732929e5e3_add_new_fields_to_user.py  85732929e5e3_reloadmigrations.py  b4e4f0cfd3b7_add_new_fields_to_user.py  b7f8bac46a8b_add_new_table_company.py  d360a41cc80b_add_new_fields_to_user.py
test_migrations/: env.py
test_migrations/versions/: 24dc8a69ec11_test_migraion.py  2fc3860ac343_add_new_fields_settings.py  47f616df509b_test_migraion.py  b3b097daf4fe_test_migraion.py  e1350b5aa451_add_company_table.py
tests/: conftest.py  docker-compose.yaml  test_User_crud.py  test_main.py
