[tool.poetry]
name = "internship-backend"
version = "0.1.0"
description = "Fast API project"
authors = ["workprior <lolprior.201@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
SQLAlchemy = "^2.0.31"
redis = "^5.0.7"
asyncio = "^3.4.3"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
