[tool.poetry]
name = "internship-backend"
version = "0.1.0"
description = "Fast API project"
authors = ["workprior <lolprior.201@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
SQLAlchemy = "^2.0.31"
redis = "^5.0.7"
asyncio = "^3.4.3"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
pydantic = "^2.8.2"
alembic = "^1.13.2"
passlib = "^1.7.4"
fastapi-pagination = "^0.12.26"
bcrypt = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"
flake8-pyproject = "^1.2.3"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
exclude = """
(
  /(
    | .git
    | .__pycache__
    | .pytest_cache
    | pytest_cache
    | .venv

  )/
)
"""


[tool.isort]
line_length = 100
profile = "black"

[tool.flake8]
max-line-length = 100
exclude = [
    # No need to traverse our git directory
    ".git",
    ".venv",
    # There's no value in checking cache directories
    "__pycache__",
    "pytest_cache",
]
extend-ignore = [
    "E501",
    "F401",
    "W291",
    "F541",
]

